Remove Paper implementation and alter NMSUtils to avoid minimizing issues